# quanttide-aigc-python

./: .gitignore  README.md  pyproject.toml
examples/autogen/: .gitignore
examples/multi_agents/: code_generator.py
examples/rag/: README.md  chunker.py  compare.py  config.py  embedding.py  llms.py  main.py  models.py  read_file.py  requirements.txt  text_process.py
examples/tencent/: config.py  hunyuan.py  requirements.txt  vectordb.py
