[tool.poetry]
name = "quanttide-aigc-python"
version = "0.1.0-alpha.1"
description = "量潮AIGC标准Python工具箱"
authors = ["QuantTide Inc. <opensource@quanttide.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "quanttide_aigc"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
